# 212IC_Perzanowski_moos

./: CMakeLists.txt
.svn/: wc.db
missions/lab2/: .LastOpenedMOOSLogDirectory  alpha.moos  alpha.moos++
missions/lab2/MOOSLog_12_4_2025_____10_52_28/: MOOSLog_12_4_2025_____10_52_28._moos  MOOSLog_12_4_2025_____10_52_28.alog  MOOSLog_12_4_2025_____10_52_28.xlog  MOOSLog_12_4_2025_____10_52_28.ylog
missions/lab2/MOOSLog_13_4_2025_____11_29_15/: MOOSLog_13_4_2025_____11_29_15._moos  MOOSLog_13_4_2025_____11_29_15.alog  MOOSLog_13_4_2025_____11_29_15.xlog  MOOSLog_13_4_2025_____11_29_15.ylog
missions/lab2/MOOSLog_13_4_2025_____11_33_22/: MOOSLog_13_4_2025_____11_33_22._moos  MOOSLog_13_4_2025_____11_33_22.alog  MOOSLog_13_4_2025_____11_33_22.xlog  MOOSLog_13_4_2025_____11_33_22.ylog
missions/lab2/MOOSLog_14_4_2025_____11_28_15/: MOOSLog_14_4_2025_____11_28_15._moos  MOOSLog_14_4_2025_____11_28_15.alog  MOOSLog_14_4_2025_____11_28_15.xlog  MOOSLog_14_4_2025_____11_28_15.ylog
missions/lab2/MOOSLog_14_4_2025_____12_13_49/: MOOSLog_14_4_2025_____12_13_49._moos  MOOSLog_14_4_2025_____12_13_49.alog  MOOSLog_14_4_2025_____12_13_49.xlog  MOOSLog_14_4_2025_____12_13_49.ylog
missions/lab2/MOOSLog_17_4_2025_____15_47_53/: MOOSLog_17_4_2025_____15_47_53._moos  MOOSLog_17_4_2025_____15_47_53.xlog  MOOSLog_17_4_2025_____15_47_53.ylog
missions/lab2_1/: .LastOpenedMOOSLogDirectory  alpha.moos  alpha.moos++
missions/lab2_1/MOOSLog_14_4_2025_____12_29_37/: MOOSLog_14_4_2025_____12_29_37._moos  MOOSLog_14_4_2025_____12_29_37.alog  MOOSLog_14_4_2025_____12_29_37.xlog  MOOSLog_14_4_2025_____12_29_37.ylog
missions/lab2_1/MOOSLog_14_4_2025_____12_33_46/: MOOSLog_14_4_2025_____12_33_46._moos  MOOSLog_14_4_2025_____12_33_46.alog  MOOSLog_14_4_2025_____12_33_46.xlog  MOOSLog_14_4_2025_____12_33_46.ylog
missions/lab2_1/MOOSLog_14_4_2025_____12_34_57/: MOOSLog_14_4_2025_____12_34_57._moos  MOOSLog_14_4_2025_____12_34_57.alog  MOOSLog_14_4_2025_____12_34_57.xlog  MOOSLog_14_4_2025_____12_34_57.ylog
missions/lab2_1/MOOSLog_14_4_2025_____12_42_08/: MOOSLog_14_4_2025_____12_42_08._moos  MOOSLog_14_4_2025_____12_42_08.alog  MOOSLog_14_4_2025_____12_42_08.xlog  MOOSLog_14_4_2025_____12_42_08.ylog
missions/lab2_1/MOOSLog_14_4_2025_____12_45_08/: MOOSLog_14_4_2025_____12_45_08._moos  MOOSLog_14_4_2025_____12_45_08.alog  MOOSLog_14_4_2025_____12_45_08.xlog  MOOSLog_14_4_2025_____12_45_08.ylog
missions/lab2_1/MOOSLog_14_4_2025_____12_56_03/: MOOSLog_14_4_2025_____12_56_03._moos  MOOSLog_14_4_2025_____12_56_03.alog  MOOSLog_14_4_2025_____12_56_03.xlog  MOOSLog_14_4_2025_____12_56_03.ylog
missions/lab2_1/MOOSLog_14_4_2025_____13_02_39/: MOOSLog_14_4_2025_____13_02_39._moos  MOOSLog_14_4_2025_____13_02_39.alog  MOOSLog_14_4_2025_____13_02_39.xlog  (+1 more)
missions/lab3/: .LastOpenedMOOSLogDirectory  alpha.moos  alpha.moos++
missions/lab4/: .LastOpenedMOOSLogDirectory  alpha.moos  alpha.moos++
missions/lab5/: .LastOpenedMOOSLogDirectory  alpha.moos  alpha.moos++
missions/lab6/: .LastOpenedMOOSLogDirectory  alpha.moos  alpha.moos++
missions/lab_behavior_depth/: .LastOpenedMOOSLogDirectory  alpha.moos  alpha.moos++
missions/pshare_communities/: .LastOpenedMOOSLogDirectory  alpha.moos  alpha.moos++  beta.moos  beta.moos++  launch_beta.sh
missions/pshare_marineviewer/: .LastOpenedMOOSLogDirectory  launch_vehicle.sh  launch_view.sh  vehicle.moos  vehicle.moos++  view.moos  view.moos++
missions/sonarTask/: .LastOpenedMOOSLogDirectory  alpha.moos  alpha.moos++
src/: CMakeLists.txt
src/lib_behaviors-test/: BHV_Depth.cpp  BHV_Depth.h  CMakeLists.txt
src/pkomunikator/: CMakeLists.txt  komunikator.cpp  komunikator.h  komunikator_Info.cpp  komunikator_Info.h  main.cpp
src/pkomunikatorSNR/: CMakeLists.txt  komunikatorSNR.cpp  komunikatorSNR.h  komunikatorSNR_Info.cpp  komunikatorSNR_Info.h  main.cpp
src/pkomunikatorTIME/: CMakeLists.txt  komunikatorTIME.cpp  komunikatorTIME.h  komunikatorTIME_Info.cpp  komunikatorTIME_Info.h  main.cpp
src/plab2/: CMakeLists.txt  lab2.cpp  lab2.h  lab2_Info.cpp  lab2_Info.h  main.cpp
src/plab2_1/: CMakeLists.txt  lab2_1.cpp  lab2_1.h  lab2_1_Info.cpp  lab2_1_Info.h  main.cpp
src/plab3/: CMakeLists.txt  lab3.cpp  lab3.h  lab3_Info.cpp  lab3_Info.h  main.cpp
src/plab4/: CMakeLists.txt  lab4.cpp  lab4.h  lab4_Info.cpp  lab4_Info.h  main.cpp
src/plab5/: CMakeLists.txt  lab5.cpp  lab5.h  lab5_Info.cpp  lab5_Info.h  main.cpp
src/plab6/: CMakeLists.txt  lab6.cpp  lab6.h  lab6_Info.cpp  lab6_Info.h  main.cpp
src/psonarTask/: CMakeLists.txt  main.cpp  sonarTask.cpp  sonarTask.h  sonarTask_Info.cpp  sonarTask_Info.h
(+511 files in other folders)
